--- a/enviroments/.env.production
+++ b/enviroments/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_ENV = production
-REACT_APP_API = https://yes-sr-api.onrender.com/api
+REACT_APP_API = https://yes-sr-barber-api.onrender.com/api
