--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "scripts": {
     "start:dev": "env-cmd -f ./enviroments/.env.development react-scripts start",
-    "build": "react-scripts build",
+    "start:prod": "env-cmd -f ./enviroments/.env.production react-scripts start",
+    "build": "env-cmd -f ./enviroments/.env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
