--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.2.3",
     "env-cmd": "^10.1.0",
     "firebase": "^9.18.0",
-    "moment": "^2.29.4",
+    "moment": "2.29.4",
+    "moment-timezone": "0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
