--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "2.29.4",
     "moment-timezone": "0.5.43",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-image-file-resizer": "^0.4.8",
