--- a/enviroments/.env.production
+++ b/enviroments/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_ENV = production
-REACT_APP_API = https://yes-sr-barber-api-pudk.onrender.com/api
+REACT_APP_API = https://g9zkt1k2dd.execute-api.us-west-2.amazonaws.com/api
 REACT_APP_ZONE = 0
