--- a/enviroments/.env.production
+++ b/enviroments/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_ENV = production
-REACT_APP_API = https://1nzhoy6f53.execute-api.us-west-2.amazonaws.com/api
+REACT_APP_API = https://jjws9tsfkj.execute-api.us-west-2.amazonaws.com/api
 REACT_APP_ZONE = 0
