--- a/enviroments/.env.production
+++ b/enviroments/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_ENV = production
-REACT_APP_API = https://36m777az2h.execute-api.us-west-2.amazonaws.com/api
+REACT_APP_API = https://jr0956v5xi.execute-api.us-west-2.amazonaws.com/production/api
 REACT_APP_ZONE = 0
