render to aws url

--- a/enviroments/.env.production
+++ b/enviroments/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_ENV = production
-REACT_APP_API = https://jr0956v5xi.execute-api.us-west-2.amazonaws.com/production/api
+REACT_APP_API = https://twk7j2zz5j.execute-api.us-west-2.amazonaws.com/production/api
 REACT_APP_ZONE = 0
