--- a/enviroments/.env.production
+++ b/enviroments/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_ENV = production
-REACT_APP_API = https://bewais7tnk.execute-api.us-west-2.amazonaws.com/production/api
+REACT_APP_API = https://sgittjplu8.execute-api.us-west-2.amazonaws.com/api
 REACT_APP_ZONE = 0
