--- a/enviroments/.env.production
+++ b/enviroments/.env.production
@@ -1,6 +1,6 @@
 REACT_APP_ENV = production
-REACT_APP_API = https://urk5z5ct60.execute-api.us-west-2.amazonaws.com/production/api   
+REACT_APP_API = https://barberapi-6dju.onrender.com//api   
 REACT_APP_ZONE = 0
 
-->https://yes-sr-barber-api-pudk.onrender.com
+->https://barberapi-6dju.onrender.com/
 ->https://urk5z5ct60.execute-api.us-west-2.amazonaws.com/production
