--- a/enviroments/.env.production
+++ b/enviroments/.env.production
@@ -1,5 +1,5 @@
 REACT_APP_ENV = production
-REACT_APP_API = https://barberapi-6dju.onrender.com//api   
+REACT_APP_API = https://barberapi-6dju.onrender.com/api   
 REACT_APP_ZONE = 0
 
 ->https://barberapi-6dju.onrender.com/
